--- a/src/assets/styles/components/_carousel.scss
+++ b/src/assets/styles/components/_carousel.scss
@@ -37,9 +37,14 @@
 				font-weight: 500;
 				margin-bottom: 25px;
 				font-size: 14px;
-				padding: 15px 40px;
+				padding: 15px 10px;
 				margin-top: 10px;
 				text-transform: uppercase;
+				display: block;
+				@media #{$breakpoint-md-up} {
+					display: inline-block;
+					padding: 15px 40px;
+				}
 				&:hover {
 					text-decoration: underline;
 					cursor: pointer;
@@ -49,9 +54,12 @@
 	}
 	.glide__arrows {
 		position: absolute;
-		bottom: 10px;
+		bottom: 260px;
 		right: 30px;
 		z-index: 3;
+		@media #{$breakpoint-md-up} {
+			bottom: 10px;
+		}
 		.glide__arrow {
 			border: none;
 			height: auto;
