custom table for parent category

--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -25,6 +25,7 @@
 @import "components/nav-filter";
 @import "components/nav-layout-view";
 @import "components/rewards";
+@import "components/table-category";
 
 // Templates
 @import "templates/archive";
