--- a/src/assets/styles/templates/_archive.scss
+++ b/src/assets/styles/templates/_archive.scss
@@ -279,7 +279,7 @@
 					content: "";
 					width: 100%;
 					height: 100%;
-					background-image: url("./../images/spinning.gif");
+					background-image: url("./../images/tick.svg");
 					background-size: 50%;
 					z-index: 5;
 					position: absolute;
@@ -480,7 +480,7 @@
 					content: "";
 					width: 100%;
 					height: 100%;
-					background-image: url("./../images/spinning.gif");
+					background-image: url("./../images/tick.svg");
 					background-size: 50%;
 					z-index: 5;
 					position: absolute;
