--- a/src/assets/styles/templates/_home.scss
+++ b/src/assets/styles/templates/_home.scss
@@ -97,7 +97,7 @@
 						content: "";
 						width: 100%;
 						height: 100%;
-						background-image: url("./../images/spinning.gif");
+						background-image: url("./../images/tick.svg");
 						background-size: 50%;
 						z-index: 5;
 						position: absolute;
@@ -265,7 +265,8 @@
 		}
 	}
 	.shopby {
-		display: none;
+		display: grid;
+		grid-template-columns: 1fr;
 		@media #{$breakpoint-md-up} {
 			display: grid;
 			grid-template-columns: 1fr 1fr;
@@ -280,8 +281,13 @@
 			border-top: none;
 			border-left: none;
 			width: 100%;
+
 			h2 {
 				margin-bottom: 25px;
+				font-size: 26px;
+				@media #{$breakpoint-md-up} {
+					font-size: 32px;
+				}
 			}
 			.button {
 				background-color: $color__dark;
