--- a/src/assets/styles/templates/_single-product.scss
+++ b/src/assets/styles/templates/_single-product.scss
@@ -125,7 +125,7 @@
 						content: "";
 						width: 100%;
 						height: 100%;
-						background-image: url("./../images/spinning.gif");
+						background-image: url("./../images/tick.svg");
 						z-index: 5;
 						position: absolute;
 						background-color: rgba($color__bright, 0.6);
@@ -381,7 +381,7 @@
 						content: "";
 						width: 100%;
 						height: 100%;
-						background-image: url("./../images/spinning.gif");
+						background-image: url("./../images/tick.svg");
 						background-size: 50%;
 						z-index: 5;
 						position: absolute;
