--- a/src/assets/styles/templates/_checkout.scss
+++ b/src/assets/styles/templates/_checkout.scss
@@ -134,6 +134,24 @@
 		}
 	}
 	//   already account
+	.woocommerce-form-login.login {
+		height: 0px;
+		pointer-events: none;
+		opacity: 0;
+		transition: all 0.1s ease-in;
+		&.s-active {
+			height: fit-content;
+			pointer-events: all;
+			opacity: 1;
+		}
+	}
+	.woocommerce-form-login-toggle {
+		cursor: pointer;
+		span {
+			font-size: 16px;
+			margin-top: 5px;
+		}
+	}
 	.woocommerce-form-login-toggle,
 	.woocommerce-form-coupon-toggle {
 		margin-bottom: 20px;
