--- a/src/assets/styles/components/_carousel.scss
+++ b/src/assets/styles/components/_carousel.scss
@@ -1,6 +1,11 @@
 // HERO SLIDER HOME
 .home-hero.glide-hero {
 	position: relative;
+	display: none;
+
+	@media #{$breakpoint-sm-up} {
+		display: block;
+	}
 
 	.slide {
 		z-index: 1;
@@ -80,6 +85,98 @@
 		}
 	}
 }
+
+// HERO HOME MOBILE
+.home-hero.glide-hero-mobile {
+	position: relative;
+
+	@media #{$breakpoint-sm-up} {
+		display: none;
+	}
+
+	.slide {
+		z-index: 1;
+		min-height: 620px;
+		background-size: cover;
+		position: relative;
+		border-bottom: 2px solid $color__dark;
+		> a {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+		}
+		.slide-text {
+			position: absolute;
+			width: 100vw;
+			border: 2px solid $color__dark;
+			background-color: $color__bright;
+			bottom: 0px;
+			left: 0px;
+			border-bottom: none;
+			padding: 7px 30px;
+			@media #{$breakpoint-md-up} {
+				width: 65vw;
+				padding: 40px 30px;
+			}
+			h2 {
+				margin-bottom: 25px;
+				font-size: 23px;
+				white-space: pre-line;
+				@media #{$breakpoint-md-up} {
+					font-size: 35px;
+				}
+			}
+			.button {
+				background-color: $color__dark;
+				color: $color__bright;
+				text-align: center;
+				border: none;
+				border-radius: 3px;
+				font-weight: 500;
+				margin-bottom: 10px;
+				font-size: 14px;
+				padding: 15px 10px;
+				margin-top: 10px;
+				text-transform: uppercase;
+				display: block;
+				@media #{$breakpoint-md-up} {
+					display: inline-block;
+					padding: 15px 40px;
+				}
+				&:hover {
+					text-decoration: underline;
+					cursor: pointer;
+				}
+			}
+		}
+	}
+	.glide__arrows {
+		position: absolute;
+		bottom: 260px;
+		right: 30px;
+		z-index: 3;
+		@media #{$breakpoint-md-up} {
+			bottom: 10px;
+		}
+		.glide__arrow {
+			border: none;
+			height: auto;
+			background: transparent;
+			&:hover {
+				cursor: pointer;
+			}
+		}
+	}
+}
+
+
+
+
+
 
 // Collections
 .glide-collection {
