carousel mobile image height

--- a/src/assets/styles/common/_general.scss
+++ b/src/assets/styles/common/_general.scss
@@ -135,3 +135,7 @@ input[type="search"]::-webkit-search-results-decoration {
 	-webkit-appearance: none;
 	display: none;
 }
+
+img{
+	height: auto;
+}
