bundle single product

--- a/src/assets/styles/templates/_single.scss
+++ b/src/assets/styles/templates/_single.scss
@@ -77,5 +77,14 @@
 				}
 			}
 		}
+		.entry-content{
+			a{
+				color: #2500f9;
+
+				&:hover{
+					text-decoration:underline;
+				}
+			}
+		}
 	}
 }
