--- a/src/assets/styles/templates/_single-product.scss
+++ b/src/assets/styles/templates/_single-product.scss
@@ -504,4 +504,61 @@
 			}
 		}
 	}
+
+	// VARIATION
+
+	.variations_form{
+		margin-top: 35px;
+		margin-bottom: 35px;
+		.variations{
+			margin-bottom: 20px;
+
+			select{
+				min-height: 44px;
+				border: none;
+				padding: 2px 10px;
+				margin-bottom: 6px;
+			}
+
+			.reset_variations{
+				font-size: 14px;
+				display: block;
+			}
+
+
+			.fdry-variation-single{
+				display: flex;
+				justify-content: center;
+				label{
+					display: none;
+				}
+			}
+		}
+	}
+
+	.single_variation_wrap.fd-selector-wrapper{
+		flex-direction: column;
+
+		button {
+			width: 100%;
+			margin-bottom: 5px;
+		}
+
+		.plus{
+			margin-bottom: 20px;
+		}
+	}
+
+}
+
+.woosb-wrap{
+	.woosb-products{
+		display: grid;
+    grid-template-columns: 1fr;
+		column-gap: 15px;
+
+		@media #{$breakpoint-md-up} {
+			grid-template-columns: 1fr 1fr;
+		}
+	}
 }
