homepage slider products

--- a/src/assets/styles/components/_carousel.scss
+++ b/src/assets/styles/components/_carousel.scss
@@ -178,8 +178,8 @@
 
 
 
-// Collections
-.glide-collection {
+// Collections New products
+.glide-collection, .glide-products {
 	padding-top: 80px;
 	h3 {
 		padding: 0 1rem;
