woocomemrce update template and some function woo prior hack

--- a/src/assets/styles/templates/_account.scss
+++ b/src/assets/styles/templates/_account.scss
@@ -12,7 +12,7 @@
 	}
 }
 .account-main {
-	padding: 80px 30px;
+	padding: 80px 30px 240px;
 	//   Rest password
 	.woocommerce-ResetPassword {
 		text-align: center;
