remove stripe or from pay form

--- a/src/assets/styles/components/_woocomponents.scss
+++ b/src/assets/styles/components/_woocomponents.scss
@@ -42,3 +42,12 @@
 		}
 	}
 }
+
+
+// STRIPE OR
+#wc-stripe-payment-request-button-separator {
+	display: none !important;
+}
+#wc-stripe-payment-request-wrapper {
+	display: none !important;
+}
